--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@tailwindcss/postcss": "^4.1.18",
+    "@aws-sdk/client-ses": "^3.758.0",
     "@vercel/analytics": "^1.6.1",
     "lucide-react": "^0.561.0",
     "react": "^19.2.0",
