--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@tailwindcss/postcss": "^4.1.18",
     "@aws-sdk/client-ses": "^3.758.0",
     "@vercel/analytics": "^1.6.1",
+    "@vercel/kv": "^3.0.0",
     "lucide-react": "^0.561.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0"
