--- a/package.json
+++ b/package.json
@@ -10,8 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@tailwindcss/postcss": "^4.1.18",
     "@aws-sdk/client-ses": "^3.758.0",
+    "@supabase/supabase-js": "^2.89.0",
+    "@tailwindcss/postcss": "^4.1.18",
     "@vercel/analytics": "^1.6.1",
     "@vercel/kv": "^3.0.0",
     "lucide-react": "^0.561.0",
