--- a/.env.example
+++ b/.env.example
@@ -5,3 +5,7 @@ VITE_SUPABASE_ANON_KEY=your_supabase_anon_key_here
 # Server-side only (DO NOT prefix with VITE_)
 SUPABASE_SERVICE_ROLE_KEY=your_supabase_service_role_key_here
 ANTHROPIC_API_KEY=your_anthropic_api_key_here
+
+# Error Tracking (Optional - for production monitoring)
+VITE_SENTRY_DSN=your_sentry_dsn_here
+VITE_APP_VERSION=1.0.0
