--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@aws-sdk/client-ses": "^3.758.0",
+    "@sentry/react": "^10.32.1",
+    "@sentry/vite-plugin": "^4.6.1",
     "@supabase/supabase-js": "^2.89.0",
     "@tailwindcss/postcss": "^4.1.18",
     "@vercel/analytics": "^1.6.1",
