--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@anthropic-ai/sdk": "^0.32.0",
     "@aws-sdk/client-ses": "^3.758.0",
     "@sentry/react": "^10.32.1",
     "@sentry/vite-plugin": "^4.6.1",
