--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "admin:populate-queue": "node scripts/populate-admin-reading-queue.js"
   },
   "dependencies": {
     "@anthropic-ai/sdk": "^0.32.0",
