--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "lucide-react": "^0.561.0",
     "openai": "^6.15.0",
     "react": "^19.2.0",
-    "react-dom": "^19.2.0"
+    "react-dom": "^19.2.0",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
