test: Add automated routing test suite
- Test preFilterRoute keyword detection
- Test cases for temporal, geographic, genre queries
- npm test command for quick validation
- Foundation for CI/CD integration

--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test": "node tests/routing.test.js",
+    "test:verbose": "VERBOSE=true node tests/routing.test.js"
   },
   "dependencies": {
     "@anthropic-ai/sdk": "^0.32.0",
