--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "globals": "^16.5.0",
     "jest": "^30.2.0",
     "postcss": "^8.5.6",
+    "sharp": "^0.34.5",
     "tailwindcss": "^4.1.18",
     "vite": "^7.2.4"
   }
