Add sarah_rating sync script and initial ratings data
- Created scripts/sync-sarah-ratings.js to pull ratings from Supabase
- Added npm run sync-ratings command
- Synced 119 books with sarah_rating (1-5 scale)
- Script checks both user_books and reading_queue tables
- 7 rated books not in catalog (noted for future addition)

Usage: npm run sync-ratings (manual, run when ratings change)

--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "test:verbose": "VERBOSE=true node tests/routing.test.js",
     "test:shared": "node --experimental-vm-modules node_modules/jest/bin/jest.js tests/booksSharedWithMe.integration.test.js",
     "test:shared:coverage": "node --experimental-vm-modules node_modules/jest/bin/jest.js tests/booksSharedWithMe.integration.test.js --coverage",
-    "test:shared:full": "node --experimental-vm-modules node_modules/jest/bin/jest.js tests/booksSharedWithMe.test.js"
+    "test:shared:full": "node --experimental-vm-modules node_modules/jest/bin/jest.js tests/booksSharedWithMe.test.js",
+    "sync-ratings": "node scripts/sync-sarah-ratings.js"
   },
   "dependencies": {
     "@anthropic-ai/sdk": "^0.32.0",
